--- a/src/components/ExtensionsCard/ExtensionsCard.scss
+++ b/src/components/ExtensionsCard/ExtensionsCard.scss
@@ -1,9 +1,9 @@
-@import "src/variables/variables.scss";
+@import "../../assets/variables/variables.scss";
 
 .card {
   box-shadow: rgba(0, 0, 0, 0.35) 0 15px 10px;
   transition: all .3s linear;
-  padding: $flex-gap 0;
+  padding: $gap 0;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
@@ -11,6 +11,12 @@
   justify-content: center;
   gap: 32px;
   position: relative;
+
+  @media (max-width: $mobile) {
+    width: 100%;
+    height: 60vh;
+    max-width: 300px;
+  }
 
   &:hover {
     box-shadow: rgba(0, 0, 0, 0.7) 0 10px 30px;
