--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,43 +1,63 @@
-@import "src/variables/variables.scss";
+@import "../../assets/variables/variables.scss";
 
 .footer {
   color: white;
 
   &__top {
     background-color: var(--color-light-blue);
-    padding: calc(#{$flex-gap} * 3);
+    padding: calc(#{$gap} * 3);
+
+    @media (max-width: $mobile) {
+      padding: calc(#{$gap} * 2) 0;
+    }
   }
 
   &__bottom {
     background-color: var(--color-dark-blue);
-    padding: $flex-gap 0;
+    padding: $gap 0;
 
     &-inner {
       display: flex;
       justify-content: space-between;
+
+      @media (max-width: $mobile) {
+        flex-direction: column;
+        align-items: center;
+      }
     }
   }
 
   &__info {
+    max-width: 50%;
     margin-bottom: 0;
     gap: 32px;
+
+    @media (max-width: $phablet) {
+      max-width: 75%;
+    }
+
+    @media (max-width: $mobile) {
+      width: 100%;
+      max-width: 100%;
+    }
   }
 
   &__title {
     text-transform: none;
-    width: 60%;
   }
 
   &__counter {
     font-size: $font-size-small;
     text-transform: capitalize;
+    text-align: right;
+    width: 190px;
   }
 
   &__social {
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    gap: $flex-gap;
+    gap: $gap;
 
     & a svg path {
       transition: all .3s linear;
@@ -59,8 +79,15 @@
   &__list {
     display: flex;
     align-items: center;
-    gap: calc(#{$flex-gap} * 2);
+    gap: calc(#{$gap} * 2);
     font-size: $font-size-small;
+
+    @media (max-width: $mobile) {
+      flex-direction: column;
+      align-items: center;
+      gap: $gap;
+      margin-bottom: $gap;
+    }
   }
 
   &__item {
@@ -77,18 +104,32 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: $flex-gap;
+    gap: $gap;
+
+    @media (max-width: $mobile) {
+      flex-direction: column;
+      gap: 32px;
+      width: 100%;
+
+      & .button {
+        width: 100%;
+      }
+    }
   }
 
   &__content {
     position: relative;
+
+    @media (max-width: $mobile) {
+      width: 100%;
+    }
 
     .footer__error {
       opacity: 0;
       font-style: italic;
       line-height: 2;
       padding-left: 10px;
-      font-size: 12px;
+      font-size: $font-size-mini;
       text-align: left;
       position: absolute;
       bottom: -20px;
@@ -97,7 +138,7 @@
       left: 0;
       right: 0;
       width: 100%;
-      height: 24px;
+      height: $gap;
       color: white;
       background-color: var(--color-light-red);
       transition: all .3s linear;
@@ -121,6 +162,10 @@
 
       &.invalid + .footer__error {
         opacity: 1;
+      }
+
+      @media (max-width: $mobile) {
+        width: 100%;
       }
     }
   }
