--- a/src/components/TabPanelInfo/TabPanelInfo.scss
+++ b/src/components/TabPanelInfo/TabPanelInfo.scss
@@ -1,11 +1,11 @@
-@import "src/variables/variables.scss";
+@import "../../assets/variables/variables.scss";
 
 .tabpanel {
   &__container {
     width: 100%;
     max-width: calc(1440px + 130px);
     margin: 0 auto;
-    padding: 40px 130px 40px 100px;
+    padding: calc(#{$gap} * 2) 0;
     display: flex;
   }
 
@@ -13,31 +13,71 @@
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
-    gap: $flex-gap;
-    padding: $flex-gap 0;
+    gap: $gap;
+    padding: $gap 0;
+
+    @media (max-width: $mobile) {
+      flex-direction: column;
+    }
   }
 
   &__right {
-    flex-basis: 40%;
+    flex-basis: 45%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: calc(#{$flex-gap} * 2);
+    gap: calc(#{$gap} * 2);
+    padding: 0 130px 0 0;
+
+    @media (max-width: $desktop) {
+      padding: 0 50px 0 0;
+    }
+
+    @media (max-width: $mobile) {
+      padding: 0 50px;
+      text-align: center;
+      align-items: center;
+      flex-basis: unset;
+      width: 100%;
+
+      & .button{
+        display: none;
+      }
+    }
   }
 
   &__left {
     flex-basis: 50%;
+    padding: 0 0 0 130px;
+    position: relative;
+
+    @media (max-width: $desktop) {
+      padding: 0 0 0 50px;
+    }
+
+    @media (max-width: $mobile) {
+      margin-bottom: calc(#{$gap} * 2);
+      flex-basis: unset;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      padding-right: 50px;
+    }
 
     &::after {
       content: "";
       background-color: var(--color-light-blue);
       border-bottom-right-radius: 100px;
-      height: 350px;
-      width: 35%;
       position: absolute;
       left: 0;
-      top: 500px;
+      top: 20%;
+      right: 40%;
+      bottom: -10%;
       z-index: -1;
     }
   }
+}
+
+.MuiTabPanel-root {
+  padding: 0 !important;
 }
