--- a/src/assets/variables/variables.scss
+++ b/src/assets/variables/variables.scss
@@ -13,8 +13,16 @@ $font-rubik: 'Rubik', sans-serif;
 // Font-sizes
 $font-size-normal: 18px;
 $font-size-small: 14px;
+$font-size-mini: 12px;
 
 // Gap
-$flex-gap: 24px;
+$gap: 24px;
+
+// Endpoints
+$mobile: 768px;
+$phablet: 992px;
+$desktop: 1200px;
+
+
 
 
